--- a/css/styles.css
+++ b/css/styles.css
@@ -561,6 +561,76 @@ body {
     background-color: rgba(255, 255, 255, 0.1);;
 }
 
+
+
+.form {
+    width: 570px;
+    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+
+    outline: 1px solid tomato;
+   
+}
+
+.form .group {
+    display: flex;
+}
+
+.form-field {
+    width: 358px;
+    height: 50px;
+    display: flex;
+    margin-right: 12px;
+    margin-top: 20px;
+}
+
+.form-field input {
+    width: 100%;
+   
+    padding: 16px 15px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    background-color: var(--footer-color);
+}
+
+.group-title {
+    color: var(--primary-white-color);  
+}
+
+.group-button {
+    display: flex;
+}
+
+.button-primary {
+    display: flex;
+    justify-content: center;
+    min-width: 200px;
+    border-radius: 4px;
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
+    font-weight: 500;
+    border: none;
+    
+    font-size: 16px;
+
+
+    text-align: center;
+
+
+}
+
+.button-primary .logo-primary {
+    width: 24px;
+    height: 24px; 
+    margin-left: 10px;
+    fill: var(--primary-white-color);
+
+}
+
+
+
+
 .subscribe b {
     display: block;
     color: var(--primary-white-color);
@@ -571,6 +641,11 @@ body {
     padding: 29px 10px 28px 10px;
     min-width: 200px;
    
+    background-color: var(--footer-color);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    color: var(--primary-text-color);
+    
+    transition: color, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subscribe .logo-primary {
@@ -583,15 +658,6 @@ body {
     fill: var(--primary-text-color);
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-}
-
-.subscribe .button {
-    background-color: var(--footer-color);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    color: var(--primary-text-color);
-    
-    transition: color, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
