--- a/css/styles.css
+++ b/css/styles.css
@@ -646,18 +646,18 @@ body {
 
   .backdrop.is-hidden {
     opacity: 1;
-    pointer-events: none;
+    
   }
 
   .modal {
     display: flex;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 450px;
-    height: 609px;
+    width: 528px;
+    height: 581px;
     background-color: var(--primary-white-color);
 
   }
@@ -683,6 +683,7 @@ body {
   }
 
   .blank-field {
+   
     outline: 1px solid tomato;  
     margin-top: 12px; 
     margin-bottom: 20px;
@@ -696,25 +697,43 @@ body {
     
   .blank-field .link {
     display: flex;
+    align-items: center;
+    
   }
 
   textarea {
     resize: none;
     width: 100%;
-    padding: 0;
+    padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
   }
 
   .blank-field input {
     width: 100%;
-    padding: 0;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    
+
+   
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
   }
 
   .blank-checkbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     margin-bottom: 30px;
+  }
+
+  .blank-checkbox input[type='checkbox'] {
+  
+  }
+
+  .blank-checkbox label {
+    margin-left: 7px;
   }
 
   .blank-checkbox a {
@@ -729,6 +748,7 @@ body {
 }
 
 .button-close {
+    
 
     width: 30px;
     height: 30px;
@@ -736,18 +756,18 @@ body {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
 
-    position: relative;
+    
 }
 
 .button-close .close {
 
-  width: 18px;
-  height: 18px; 
-
+   width: 18px;
+   height: 18px; 
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-.button-close :hover {
+.button-close:hover .close {
     fill: var(--accent-color)
 }
 
