--- a/css/styles.css
+++ b/css/styles.css
@@ -645,7 +645,8 @@ body {
   }
 
   .backdrop.is-hidden {
-    opacity: 1;
+    opacity: 0;
+    pointer-events: none;
     
   }
 
@@ -657,14 +658,13 @@ body {
     transform: translate(-50%, -50%);
 
     width: 528px;
-    height: 581px;
     background-color: var(--primary-white-color);
-
+    
+    
   }
 
   .form-blank {
    
-    outline: 1px solid tomato;
     width: 100%;
     padding: 40px;
    
@@ -683,11 +683,10 @@ body {
   }
 
   .blank-field {
-   
-    outline: 1px solid tomato;  
-    margin-top: 12px; 
+  
+    margin-top: 30px; 
     margin-bottom: 20px;
-
+    
   }
   
 
@@ -704,13 +703,16 @@ body {
 
   .form-input:focus + .form-label,
   .form-input:not(:placeholder-shown) + .form-label {
-    color: tomato;
-    transform: translateY(-50px);
+    color: var(--accent-color);
+    transform: translateY(-30px) translateX(-28px);
+
   }
 
   .form-label {
     position: absolute;
     margin-left: 42px;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .form-icone {
@@ -720,6 +722,12 @@ body {
     width: 18px;
     height: 18px;
     fill: var(--title-tex-color);
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .form-input:focus ~ .form-icone {
+    fill: var(--accent-color);
   }
 
   textarea {
@@ -734,6 +742,7 @@ body {
     width: 100%;
     padding-top: 12px;
     padding-bottom: 12px;
+    padding-left: 42px;
     
 
    
@@ -743,22 +752,51 @@ body {
 
   .blank-checkbox {
     display: flex;
-    align-items: center;
     justify-content: center;
 
     margin-bottom: 30px;
   }
 
-  .blank-checkbox input[type='checkbox'] {
-  
-  }
-
-  .blank-checkbox label {
-    margin-left: 7px;
+  .checkbox {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
   }
 
   .blank-checkbox a {
     color: var(--accent-color);
+  }
+
+  .checkbox-icon {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+
+    border-radius: 4px;
+    border: 2px solid var(--title-tex-color);
+    
+    margin-right: 7px;
+  }
+
+  .checkbox:checked + .checkbox-icon {
+    
+    background-color: var(--accent-color);
+    background-image: url('../images/icon\ check.svg');
+    background-size: contain;
+    background-origin: border-box;
+    border-color: var(--accent-color);
+    
+  }
+
+  .checkbox-field {
+    display: flex;
+    align-items: center;
+   
   }
 
   .backdrop .button-primary {
@@ -784,7 +822,6 @@ body {
 }
 
 .button-close .close {
-   
 
    width: 18px;
    height: 18px; 
