--- a/css/styles.css
+++ b/css/styles.css
@@ -235,6 +235,7 @@ body {
 .button-hero {
     padding: 10px 32px;
     min-width: 200px;
+    border: none;
 }
 
 
@@ -642,6 +643,10 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+
+    opacity: 1;
+    transition: opacity 600ms cubic-bezier(0.4, 0, 0.2, 1);
+
   }
 
   .backdrop.is-hidden {
